--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <p></p>
 
+<object width="640" height="385"><param name="movie" value="http://www.youtube.com/watch?v=9H7e6BcI5Fo&hl=en_US&start=1868"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/i9H7e6BcI5Fo&hl=en_US&start=209" type="application/x-shockwave-flash" allowscriptaccess="always" width="640" height="385"></embed></object>
+
 <p>Snapper is a tool for managing btrfs snapshots. Apart from the obvious creation and deletion of snapshots it can compare snapshots and revert differences between snapshots. In simple terms, this allows users to view older versions of files and revert changes. Snapper is available as a command line interface tool and a YaST module. Both make use of the C++ library libsnapper which is also available to other programs.</p>
       </section>
     </div>
