--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="span4">
           <h2>Watch it in action</h2>
-	  <p>Greg Kroah-Hartman and Matthias Eckermman play sysadmins and screw a web server configuration.</p>
+	  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
 	  <p><img src="http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209"/></p>
 	  <!--<iframe width="560" height="315" src="http://www.youtube.com/embed/9H7e6BcI5Fo?start=209" frameborder="0" allowfullscreen></iframe>-->
 
