--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ piwikTracker.enableLinkTracking();
        </div>
         <div class="span4">
           <h2>Contribute</h2>
-          <p>Snapper is opensource. Port it to your distribution or integrate it with an application using dbus.</p>
+          <p>Snapper is opensource. Port it to your distribution or integrate it with an application.</p>
           <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on github &raquo;</a></p>
         </div>
       </div>
