prototype of a brand ring

--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@ piwikTracker.enableLinkTracking();
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
+
           <a class="brand" href="#">Snapper</a>
           <div class="nav-collapse">
             <ul class="nav">
@@ -130,11 +126,39 @@ piwikTracker.enableLinkTracking();
          </div>
        </div>      
 
-      <hr>
+      <hr/>
+
+        <div class="row">
+          <div class="span4">
+            Technology from 
+          </div>
+          <div class="span4">
+            hello
+          </div>
+        </div>
 
       <footer>
-        <p>&copy; 2012 <a href="http://www.suse.com/">SUSE</a></p>        
+        <p>&copy; 2012 <a href="http://www.suse.com/">SUSE</a></p>
+
+        <div class="navbar navbar-fixed-bottom">
+          <div class="navbar-inner">
+            <div class="container">
+              <ul class="nav pull-left">
+                <li><a href="http://www.suse.com">Technology from <img width="70px" height="32px" src="images/suse_dark.png"/></a></li>
+              </ul>
+              <ul class="nav pull-right">
+                <li><a href="http://www.snapper.io">snapper</a></li>
+                <li><a href="#">libstorage</a></li>
+                <li><a href="#">libsolv</a></li>
+                <li><a href="#">libyui</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
       </footer>
+
+
 
     </div> <!-- /container -->
 
