- added page with videos

--- a/videos.html
+++ b/videos.html
@@ -67,8 +67,8 @@ piwikTracker.enableLinkTracking();
           <a class="brand" href="index.html">Snapper</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
-	      <li><a href="videos.html">Videos</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="videos.html">Videos</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
 	      <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Documentation</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
@@ -80,20 +80,7 @@ piwikTracker.enableLinkTracking();
 
     <div class="container">
 
-       <div class="hero-unit">
-        <h1>Travel back in time and compare...</h1>
-        <p>The ultimate snapshot tool for Linux</p>
-
-	<p><a  href="http://software.opensuse.org/download/package?project=filesystems:snapper&package=snapper" class="btn btn-primary btn-large">Download &raquo;</a></p>
-       </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <div class="thumbnail"><img src="images/snapper_yast2_diff.png"/></div>
-
-        </div>
-        <div class="span4">
+        <div>
 
           <h2>Watch it in action</h2>
 
@@ -114,26 +101,6 @@ piwikTracker.enableLinkTracking();
           <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
             <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
           </a></p>
-
-       </div>
-        <div class="span4">
-          <h2>Contribute</h2>
-          <p>Snapper is opensource. Port it to your distribution or integrate it with an application.</p>
-          <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on github &raquo;</a></p>
-        </div>
-      </div>
-      <hr/>
-
-      <div class="row">
-          <div class="span4">
-		<div class="g-plusone"></div>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://snapper.io">Tweet</a>
-
-          </div>
-	  <div class="span8">
-            <p class=""><cite>Thanks to Snapper, you can mess up system configuration changes or package installations or updates without having to restore from an old backup and risking to lose some files. Just revert to the snapshot before your problematic change and you’re fine. <i><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review/">Linux User & Developer Magazine</a></i></cite></p>
-         </div>
-       </div>
 
       <hr>
 
