- don't use index.html

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ piwikTracker.enableLinkTracking();
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html">Snapper</a>
+          <a class="brand" href=".">Snapper</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li class="active"><a href=".">Home</a></li>
 	      <li><a href="videos.html">Videos</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
 	      <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Documentation</a></li>
