- added links to videos

--- a/videos.html
+++ b/videos.html
@@ -102,6 +102,33 @@ piwikTracker.enableLinkTracking();
             <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
           </a></p>
 
+	  <p>This video demonstrates Snapper and Samba working in conjunction
+	    to handle File Server Remote VSS Protocol (FSRVP) snapshot
+	    creation requests. In doing so, Samba triggers the creation of a
+	    snapshot via Snapper's D-Bus interface, and then proceeds to
+	    expose the snapshot as a new Samba share.</p>
+
+          <p><a href="http://www.youtube.com/watch?v=VVKCRpccjPk">
+            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" />
+          </a></p>
+
+	  <p>This video shows how the Samba File Server Remote VSS Protocol
+	    (FSRVP) client can be used to create, expose and remove share
+	    snapshots on a remote Windows server.</p>
+
+          <p><a href="http://www.youtube.com/watch?v=csbEX4V2do0">
+            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" />
+          </a></p>
+
+	  <p>This video shows Snapper and Samba cooperating to expose
+	    snapshots to a remote Windows client. The Windows client is able
+	    to access the snapshot via the Windows Explorer previous versions
+	    dialog.</p>
+
+          <p><a href="http://www.youtube.com/watch?v=RZq84ONWu1I">
+            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" />
+          </a></p>
+
       <hr>
 
       <footer>
