--- a/videos.html
+++ b/videos.html
@@ -82,7 +82,7 @@ piwikTracker.enableLinkTracking();
 
         <div>
 
-          <h2>Watch it in action</h2>
+          <h2>General</h2>
 
 	  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
 
@@ -101,6 +101,8 @@ piwikTracker.enableLinkTracking();
           <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
             <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
           </a></p>
+
+	  <h2>Server Side Snapper</h2>
 
 	  <p>This video demonstrates Snapper and Samba working in conjunction
 	    to handle File Server Remote VSS Protocol (FSRVP) snapshot
