--- a/index.html
+++ b/index.html
@@ -84,7 +84,16 @@ piwikTracker.enableLinkTracking();
         <h1>Travel back in time and compare...</h1>
         <p>The ultimate snapshot tool for Linux</p>
 
-	<p><a  href="http://software.opensuse.org/download/package?project=filesystems:snapper&package=snapper" class="btn btn-primary btn-large">Download &raquo;</a></p>
+	<div class="row">
+	  <div class="span4">
+	    <p><a href="http://software.opensuse.org/download/package?project=filesystems:snapper&package=snapper"
+		  class="btn btn-primary btn-large">Download Binaries &raquo;</a></p>
+	  </div>
+          <div class="span4">
+	    <p><a href="ftp://ftp.suse.com/pub/projects/snapper/"
+		  class="btn btn-primary btn-large">Download Source &raquo;</a></p>
+	  </div>
+	</div>
        </div>
 
       <!-- Example row of columns -->
