- added man-pages

--- a/documentation.html
+++ b/documentation.html
@@ -68,9 +68,9 @@ piwikTracker.enableLinkTracking();
           <div class="nav-collapse">
             <ul class="nav">
               <li><a href=".">Home</a></li>
-              <li class="active"><a href="videos.html">Videos</a></li>
+              <li><a href="videos.html">Videos</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
-	      <li><a href="documentation.html">Documentation</a></li>
+	      <li class="active"><a href="documentation.html">Documentation</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -82,54 +82,20 @@ piwikTracker.enableLinkTracking();
 
         <div>
 
-          <h2>General</h2>
+          <h2>Man Pages</h2>
 
-	  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
+	  <ul>
+	    <li><a href="snapper.html">snapper</a></li>
+	    <li><a href="snapperd.html">snapperd</a></li>
+	    <li><a href="pam_snapper.html">pam_snapper</a></li>
+	  </ul>
 
-          <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
-          </a></p>
+	  <h2>Misc</h2>
 
-	  <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
-
-          <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
-          </a></p>
-
-          <p>Demo at SUSECon 2012 in Orlando</p>
-
-          <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
-          </a></p>
-
-	  <h2>Server Side Snapper</h2>
-
-	  <p>This video demonstrates Snapper and Samba working in conjunction
-	    to handle File Server Remote VSS Protocol (FSRVP) snapshot
-	    creation requests. In doing so, Samba triggers the creation of a
-	    snapshot via Snapper's D-Bus interface, and then proceeds to
-	    expose the snapshot as a new Samba share.</p>
-
-          <p><a href="http://www.youtube.com/watch?v=VVKCRpccjPk">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" />
-          </a></p>
-
-	  <p>This video shows how the Samba File Server Remote VSS Protocol
-	    (FSRVP) client can be used to create, expose and remove share
-	    snapshots on a remote Windows server.</p>
-
-          <p><a href="http://www.youtube.com/watch?v=csbEX4V2do0">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" />
-          </a></p>
-
-	  <p>This video shows Snapper and Samba cooperating to expose
-	    snapshots to a remote Windows client. The Windows client is able
-	    to access the snapshot via the Windows Explorer previous versions
-	    dialog.</p>
-
-          <p><a href="http://www.youtube.com/watch?v=RZq84ONWu1I">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" />
-          </a></p>
+	  <ul>
+	    <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Chapter
+		in SLE Administration Guide</a></li>
+	  </ul>
 
       <hr>
 
