--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ piwikTracker.enableLinkTracking();
               <li class="active"><a href=".">Home</a></li>
 	      <li><a href="videos.html">Videos</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
-	      <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Documentation</a></li>
+	      <li><a href="documentation.html">Documentation</a></li>
               <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
             </ul>
           </div><!--/.nav-collapse -->
