- moved manpages to subdir

--- a/documentation.html
+++ b/documentation.html
@@ -85,9 +85,9 @@ piwikTracker.enableLinkTracking();
           <h2>Man Pages</h2>
 
 	  <ul>
-	    <li><a href="snapper.html">snapper</a></li>
-	    <li><a href="snapperd.html">snapperd</a></li>
-	    <li><a href="pam_snapper.html">pam_snapper</a></li>
+	    <li><a href="manpages/snapper.html">snapper</a></li>
+	    <li><a href="manpages/snapperd.html">snapperd</a></li>
+	    <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
 	  </ul>
 
 	  <h2>Misc</h2>
