--- a/videos.html
+++ b/videos.html
@@ -1,143 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Snapper, The ultimate snapshot tool for Linux</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+---
+layout: default
+piwik: true
+---
+<div>
 
-    <!-- Le styles -->
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
+  <h2>General</h2>
 
-    </style>
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web
+  server configuration.</p>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
+  </a></p>
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
+  <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
 
-    <!-- Place this render call where appropriate -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+  <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
+  </a></p>
 
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://beans.opensuse.org/piwik/" : "http://beans.opensuse.org/piwik/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 22);
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://beans.opensuse.org/piwik/piwik.php?idsite=22" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
+  <p>Demo at SUSECon 2012 in Orlando</p>
 
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </head>
+  <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
+  </a></p>
 
-  <body>
+  <h2>Server Side Snapper</h2>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href=".">Snapper</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a href=".">Home</a></li>
-              <li class="active"><a href="videos.html">Videos</a></li>
-              <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
-	      <li><a href="documentation.html">Documentation</a></li>
-              <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+  <p>This video demonstrates Snapper and Samba working in conjunction to
+    handle File Server Remote VSS Protocol (FSRVP) snapshot creation
+    requests. In doing so, Samba triggers the creation of a snapshot via
+    Snapper's D-Bus interface, and then proceeds to expose the snapshot as a
+    new Samba share.</p>
 
-    <div class="container">
+  <p><a href="http://www.youtube.com/watch?v=VVKCRpccjPk">
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" />
+  </a></p>
 
-        <div>
+  <p>This video shows how the Samba File Server Remote VSS Protocol (FSRVP)
+    client can be used to create, expose and remove share snapshots on a
+    remote Windows server.</p>
 
-          <h2>General</h2>
+  <p><a href="http://www.youtube.com/watch?v=csbEX4V2do0">
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" />
+  </a></p>
 
-	  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
+  <p>This video shows Snapper and Samba cooperating to expose snapshots to a
+    remote Windows client. The Windows client is able to access the snapshot
+    via the Windows Explorer previous versions dialog.</p>
 
-          <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
-          </a></p>
+  <p><a href="http://www.youtube.com/watch?v=RZq84ONWu1I">
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" />
+  </a></p>
 
-	  <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
-
-          <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
-          </a></p>
-
-          <p>Demo at SUSECon 2012 in Orlando</p>
-
-          <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
-          </a></p>
-
-	  <h2>Server Side Snapper</h2>
-
-	  <p>This video demonstrates Snapper and Samba working in conjunction
-	    to handle File Server Remote VSS Protocol (FSRVP) snapshot
-	    creation requests. In doing so, Samba triggers the creation of a
-	    snapshot via Snapper's D-Bus interface, and then proceeds to
-	    expose the snapshot as a new Samba share.</p>
-
-          <p><a href="http://www.youtube.com/watch?v=VVKCRpccjPk">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" />
-          </a></p>
-
-	  <p>This video shows how the Samba File Server Remote VSS Protocol
-	    (FSRVP) client can be used to create, expose and remove share
-	    snapshots on a remote Windows server.</p>
-
-          <p><a href="http://www.youtube.com/watch?v=csbEX4V2do0">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" />
-          </a></p>
-
-	  <p>This video shows Snapper and Samba cooperating to expose
-	    snapshots to a remote Windows client. The Windows client is able
-	    to access the snapshot via the Windows Explorer previous versions
-	    dialog.</p>
-
-          <p><a href="http://www.youtube.com/watch?v=RZq84ONWu1I">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" />
-          </a></p>
-
-      <hr>
-
-      <footer>
-        <p>&copy; 2013 <a href="http://www.suse.com/">SUSE</a></p>
-      </footer>
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+</div>
