--- a/documentation.html
+++ b/documentation.html
@@ -1,109 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Snapper, The ultimate snapshot tool for Linux</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+---
+layout: default
+piwik: true
+---
+<div>
 
-    <!-- Le styles -->
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
+  <h2>Man Pages</h2>
 
-    </style>
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <ul>
+    <li><a href="manpages/snapper.html">snapper</a></li>
+    <li><a href="manpages/snapperd.html">snapperd</a></li>
+    <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
+  </ul>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <h2>Misc</h2>
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
+  <ul>
+    <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Chapter
+        in SLE Administration Guide</a></li>
+  </ul>
 
-    <!-- Place this render call where appropriate -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
-
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://beans.opensuse.org/piwik/" : "http://beans.opensuse.org/piwik/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 22);
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://beans.opensuse.org/piwik/piwik.php?idsite=22" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href=".">Snapper</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a href=".">Home</a></li>
-              <li><a href="videos.html">Videos</a></li>
-              <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
-	      <li class="active"><a href="documentation.html">Documentation</a></li>
-              <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-        <div>
-
-          <h2>Man Pages</h2>
-
-	  <ul>
-	    <li><a href="manpages/snapper.html">snapper</a></li>
-	    <li><a href="manpages/snapperd.html">snapperd</a></li>
-	    <li><a href="manpages/pam_snapper.html">pam_snapper</a></li>
-	  </ul>
-
-	  <h2>Misc</h2>
-
-	  <ul>
-	    <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Chapter
-		in SLE Administration Guide</a></li>
-	  </ul>
-
-      <hr>
-
-      <footer>
-        <p>&copy; 2013 <a href="http://www.suse.com/">SUSE</a></p>
-      </footer>
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+</div>
