--- a/index.html
+++ b/index.html
@@ -1,156 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Snapper, The ultimate snapshot tool for Linux</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+---
+layout: default
+piwik: true
+social: true
+---
+<div class="container">
 
-    <!-- Le styles -->
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
+  <div class="hero-unit">
+    <h1>Travel back in time and compare...</h1>
+    <p>The ultimate snapshot tool for Linux</p>
 
-    </style>
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-
-    <!-- Place this render call where appropriate -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
-
-<!-- Piwik -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://beans.opensuse.org/piwik/" : "http://beans.opensuse.org/piwik/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 22);
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://beans.opensuse.org/piwik/piwik.php?idsite=22" style="border:0" alt="" /></p></noscript>
-<!-- End Piwik Tracking Code -->
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href=".">Snapper</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href=".">Home</a></li>
-	      <li><a href="videos.html">Videos</a></li>
-              <li><a href="http://en.opensuse.org/openSUSE:Snapper_Tutorial">Tutorial</a></li>
-	      <li><a href="documentation.html">Documentation</a></li>
-              <li><a href="http://en.opensuse.org/openSUSE:Snapper_FAQ">FAQ</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+    <div class="row">
+      <div class="span4">
+	<p><a href="http://software.opensuse.org/download/package?project=filesystems:snapper&package=snapper"
+	      class="btn btn-primary btn-large">Download Binaries &raquo;</a></p>
+      </div>
+      <div class="span4">
+	<p><a href="ftp://ftp.suse.com/pub/projects/snapper/"
+	      class="btn btn-primary btn-large">Download Source &raquo;</a></p>
       </div>
     </div>
+  </div>
 
-    <div class="container">
+  <!-- Example row of columns -->
+  <div class="row">
+    <div class="span4">
+      <div class="thumbnail"><img src="images/snapper_yast2_diff.png"/></div>
 
-       <div class="hero-unit">
-        <h1>Travel back in time and compare...</h1>
-        <p>The ultimate snapshot tool for Linux</p>
+    </div>
+    <div class="span4">
 
-	<div class="row">
-	  <div class="span4">
-	    <p><a href="http://software.opensuse.org/download/package?project=filesystems:snapper&package=snapper"
-		  class="btn btn-primary btn-large">Download Binaries &raquo;</a></p>
-	  </div>
-          <div class="span4">
-	    <p><a href="ftp://ftp.suse.com/pub/projects/snapper/"
-		  class="btn btn-primary btn-large">Download Source &raquo;</a></p>
-	  </div>
-	</div>
-       </div>
+      <h2>Watch it in action</h2>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <div class="thumbnail"><img src="images/snapper_yast2_diff.png"/></div>
+      <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
 
-        </div>
-        <div class="span4">
+      <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
+          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
+      </a></p>
 
-          <h2>Watch it in action</h2>
+      <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
 
-	  <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
+      <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
+          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
+      </a></p>
 
-          <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
-          </a></p>
+      <p>Demo at SUSECon 2012 in Orlando</p>
 
-	  <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
+      <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
+          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
+      </a></p>
 
-          <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
-          </a></p>
+    </div>
+    <div class="span4">
+      <h2>Contribute</h2>
+      <p>Snapper is opensource. Port it to your distribution or integrate it with an application.</p>
+      <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on github &raquo;</a></p>
+    </div>
+  </div>
 
-          <p>Demo at SUSECon 2012 in Orlando</p>
+  <hr>
 
-          <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
-            <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
-          </a></p>
+  <div class="row">
+    <div class="span4">
+      <div class="g-plusone"></div>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://snapper.io">Tweet</a>
+    </div>
 
-       </div>
-        <div class="span4">
-          <h2>Contribute</h2>
-          <p>Snapper is opensource. Port it to your distribution or integrate it with an application.</p>
-          <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on github &raquo;</a></p>
-        </div>
-      </div>
-      <hr/>
+    <div class="span8">
+      <p class=""><cite>Thanks to Snapper, you can mess up system configuration changes or package installations or updates without having to restore from an old backup and risking to lose some files. Just revert to the snapshot before your problematic change and you’re fine. <i><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review/">Linux User & Developer Magazine</a></i></cite></p>
+    </div>
+  </div>
 
-      <div class="row">
-          <div class="span4">
-		<div class="g-plusone"></div>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://snapper.io">Tweet</a>
-
-          </div>
-	  <div class="span8">
-            <p class=""><cite>Thanks to Snapper, you can mess up system configuration changes or package installations or updates without having to restore from an old backup and risking to lose some files. Just revert to the snapshot before your problematic change and you’re fine. <i><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review/">Linux User & Developer Magazine</a></i></cite></p>
-         </div>
-       </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; 2013 <a href="http://www.suse.com/">SUSE</a></p>
-      </footer>
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+</div>
