- fixed some html errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ social: true
   <!-- Example row of columns -->
   <div class="row">
     <div class="span4">
-      <div class="thumbnail"><img src="images/snapper_yast2_diff.png"/></div>
+      <div class="thumbnail"><img src="images/snapper_yast2_diff.png" alt=""/></div>
 
     </div>
     <div class="span4">
@@ -34,19 +34,19 @@ social: true
       <p>Greg Kroah-Hartman and Matthias Eckermann play sysadmins and screw a web server configuration.</p>
 
       <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
-          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
+          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" alt=""/>
       </a></p>
 
       <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
 
       <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
-          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
+          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" alt=""/>
       </a></p>
 
       <p>Demo at SUSECon 2012 in Orlando</p>
 
       <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
-          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
+          <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" alt=""/>
       </a></p>
 
     </div>
