--- a/videos.html
+++ b/videos.html
@@ -10,19 +10,19 @@ piwik: true
   server configuration.</p>
 
   <p><a href="http://www.youtube.com/v/9H7e6BcI5Fo?start=209">
-      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" />
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/9H7e6BcI5Fo/1.jpg?start=209) center center black;" alt=""/>
   </a></p>
 
   <p>Arvin Schnell (lead developer) at FOSDEM 2012</p>
 
   <p><a href="http://video.fosdem.org/2012/crossdistro/Btrfs_and_Snapper.webm">
-      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" />
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(images/arvin_fosdem_2012_120x90.jpg) center center black;" alt=""/>
   </a></p>
 
   <p>Demo at SUSECon 2012 in Orlando</p>
 
   <p><a href="http://www.youtube.com/watch?v=GJgWvTLo07k">
-      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" />
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/GJgWvTLo07k/2.jpg) center center black;" alt=""/>
   </a></p>
 
   <h2>Server Side Snapper</h2>
@@ -34,7 +34,7 @@ piwik: true
     new Samba share.</p>
 
   <p><a href="http://www.youtube.com/watch?v=VVKCRpccjPk">
-      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" />
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/VVKCRpccjPk/2.jpg) center center black;" alt=""/>
   </a></p>
 
   <p>This video shows how the Samba File Server Remote VSS Protocol (FSRVP)
@@ -42,7 +42,7 @@ piwik: true
     remote Windows server.</p>
 
   <p><a href="http://www.youtube.com/watch?v=csbEX4V2do0">
-      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" />
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/csbEX4V2do0/2.jpg) center center black;" alt=""/>
   </a></p>
 
   <p>This video shows Snapper and Samba cooperating to expose snapshots to a
@@ -50,7 +50,7 @@ piwik: true
     via the Windows Explorer previous versions dialog.</p>
 
   <p><a href="http://www.youtube.com/watch?v=RZq84ONWu1I">
-      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" />
+      <img src="images/play_120x90.png" width="120" height="90" border="0" style="background:URL(http://img.youtube.com/vi/RZq84ONWu1I/2.jpg) center center black;" alt=""/>
   </a></p>
 
 </div>
