- fixed some html errors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ social: true
 
     <div class="row">
       <div class="span4">
-	<p><a href="http://software.opensuse.org/download/package?project=filesystems:snapper&package=snapper"
+	<p><a href="http://software.opensuse.org/download/package?project=filesystems:snapper&amp;package=snapper"
 	      class="btn btn-primary btn-large">Download Binaries &raquo;</a></p>
       </div>
       <div class="span4">
