- updates man-pages

--- a/manpages/snapper.html
+++ b/manpages/snapper.html
@@ -54,7 +54,7 @@
     snapshot it made. E.g. the files of a database can be inconsistence while
     the database is running.</p><p>Consistency after undochange is not guaranteed. E.g. when the
     creation of a user is undone there might still exist files from that
-    user.</p><p>Support for extended attributes is a compile-time option.</p></div><div class="refsect1"><a name="homepage"></a><h2>HOMEPAGE</h2><p><a class="ulink" href="http://en.opensuse.org/Portal:Snapper" target="_top">http://en.opensuse.org/Portal:Snapper</a></p></div><div class="refsect1"><a name="authors"></a><h2>AUTHORS</h2><p>Arvin Schnell <code class="email">&lt;<a class="email" href="mailto:aschnell@suse.de">aschnell@suse.de</a>&gt;</code></p></div><div class="refsect1"><a name="see_also"></a><h2>SEE ALSO</h2><p>
+    user.</p><p>Support for extended attributes is a compile-time option.</p></div><div class="refsect1"><a name="homepage"></a><h2>HOMEPAGE</h2><p><a class="ulink" href="http://snapper.io/" target="_top">http://snapper.io/</a></p></div><div class="refsect1"><a name="authors"></a><h2>AUTHORS</h2><p>Arvin Schnell <code class="email">&lt;<a class="email" href="mailto:aschnell@suse.de">aschnell@suse.de</a>&gt;</code></p></div><div class="refsect1"><a name="see_also"></a><h2>SEE ALSO</h2><p>
       <span class="citerefentry"><span class="refentrytitle">btrfs</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">lvm</span>(8)</span>,
       <span class="citerefentry"><span class="refentrytitle">attr</span>(5)</span>
