- added link to Linux User review

--- a/documentation.html
+++ b/documentation.html
@@ -42,6 +42,8 @@ piwik: true
   <h2>Reviews</h2>
 
   <ul>
+    <li><a href="http://www.linuxuser.co.uk/reviews/suse-linux-enterprise-server-11-sp2-review">Linux
+    User</a></li>
     <li><a href="http://www.heise.de/open/artikel/Was-OpenSuse-12-1-bringt-1379293.html">heise.de
     (in German)</a></li>
     <li><a href="http://www.pro-linux.de/artikel/2/1543/3,opensuse-121.html">pro-linux.de
