- updates man-pages

--- a/manpages/pam_snapper.html
+++ b/manpages/pam_snapper.html
@@ -23,7 +23,7 @@
       pam_snapper_pamconfig,
       pam_snapper_useradd,
       pam_snapper_userdel
-    </p></div><div class="refsect1"><a name="authors"></a><h2>AUTHORS</h2><p>pam-snapper was written by Matthias G. Eckermann <code class="email">&lt;<a class="email" href="mailto:mge@suse.com">mge@suse.com</a>&gt;</code>
+    </p></div><div class="refsect1"><a name="homepage"></a><h2>HOMEPAGE</h2><p><a class="ulink" href="http://snapper.io/" target="_top">http://snapper.io/</a></p></div><div class="refsect1"><a name="authors"></a><h2>AUTHORS</h2><p>pam-snapper was written by Matthias G. Eckermann <code class="email">&lt;<a class="email" href="mailto:mge@suse.com">mge@suse.com</a>&gt;</code>
     as part of SUSE Hackweek#9 in April 2013.</p><p>This module would not have been possible without the work of Arvin
     Schnell on the snapper project. pam-snapper inherits DBUS handling from
     "snapper_dbus_cli.c" by David Disseldorp.</p><p>The module builds on the Linux PAM stack and its documentation,
