- tiny linguistic improvements

--- a/features.html
+++ b/features.html
@@ -11,15 +11,15 @@ piwik: true
   differences between snapshots. In simple terms, this allows root and
   non-root users to view older versions of files and revert changes.</p>
 
-  <p>The features are:</p>
+  <p>The features include:</p>
 
   <ul>
     <li>
-      <p>Create manual snapshots</p>
+      <p>Manually create snapshots</p>
     </li>
 
     <li>
-      <p>Automatic create snapshots with YaST and zypp</p>
+      <p>Automatic create snapshots, e.g. with YaST and zypp</p>
     </li>
 
     <li>
