- renamed feature page to overview

--- a/overview.html
+++ b/overview.html
@@ -4,7 +4,7 @@ piwik: true
 ---
 <div>
 
-  <h2>Features</h2>
+  <h2>Overview</h2>
 
   <p>Snapper is a tool for managing btrfs snapshots. Apart from the obvious
   creation and deletion of snapshots it can compare snapshots and revert
