--- a/development.html
+++ b/development.html
@@ -6,7 +6,7 @@ piwik: true
 
   <h2>Development</h2>
 
-  <p>Snapper is Open Source and licenced under the GPL version 2.0.</p>
+  <p>Snapper is open source and licensed under the GPL version 2.0.</p>
 
   <h3>Browse git repository</h3>
 
