--- a/overview.html
+++ b/overview.html
@@ -6,9 +6,9 @@ piwik: true
 
   <h2>Overview</h2>
 
-  <p>Snapper is a tool for managing btrfs snapshots. Apart from the obvious
-  creation and deletion of snapshots it can compare snapshots and revert
-  differences between snapshots. In simple terms, this allows root and
+  <p>Snapper is a tool for Linux filesystem snapshot management. Apart from
+  the obvious creation and deletion of snapshots it can compare snapshots and
+  revert differences between snapshots. In simple terms, this allows root and
   non-root users to view older versions of files and revert changes.</p>
 
   <p>The features include:</p>
