- same size for Google +1 and Twitter Tweet buttons

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ social: true
 
   <div class="row">
     <div class="span4">
-      <div class="g-plusone"></div>
+      <div class="g-plusone" data-size="medium"></div>
       <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://snapper.io">Tweet</a>
     </div>
 
