- proper capitalisation of GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ social: true
     <div class="span4">
       <h2>Contribute</h2>
       <p>Snapper is open source. Port it to your distribution or integrate it with an application.</p>
-      <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on github &raquo;</a></p>
+      <p><a class="btn" href="http://github.com/openSUSE/snapper">Fork us on GitHub &raquo;</a></p>
     </div>
   </div>
 
