- link to opensuse reference

--- a/documentation.html
+++ b/documentation.html
@@ -54,6 +54,8 @@ piwik: true
   <h3>Miscellaneous</h3>
 
   <ul>
+    <li><a href="http://doc.opensuse.org/documentation/html/openSUSE/opensuse-reference/cha.snapper.html">Chapter
+	in openSUSE Reference</a></li>
     <li><a href="http://www.suse.com/documentation/sles11/book_sle_admin/data/cha_snapper.html">Chapter
         in SLE Administration Guide</a></li>
   </ul>
